# meta-ad-pipeline

./: .env.example  .gitignore  README.md  agents.py  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
docs/: EVALUATION.md  OBSERVABILITY.md
docs/superpowers/plans/: 2026-04-19-meta-ad-pipeline-v2.md  2026-04-19-meta-ad-pipeline.md
docs/superpowers/specs/: 2026-04-19-meta-ad-pipeline-design-v2.md  2026-04-19-meta-ad-pipeline-design-v3.md  2026-04-19-meta-ad-pipeline-design.md
public/: osopi.css
scripts/: run_pipeline_headless.py  seed_eval_dataset.py  verify_langfuse.py
tests/: test_agents_smoke.py  test_app.py  test_critique.py  test_eval.py  test_render.py  test_schemas.py  test_scrape.py  test_tracing.py  test_view_reference.py
tests/fixtures/: eval_dataset.json  sample_creative.html
tests/integration/: conftest.py  test_chainlit_boot.py  test_live_pipeline.py
tools/: creative.py  critique.py  eval.py  mcp_server.py  schemas.py  scrape.py  tracing.py  view_reference.py
